src/index.css
@import url('https://fonts.googleapis.com/css?family=Roboto:300');

body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  color: #E7DCD2;
  background-color: #425351;
}

a, a:hover {
  color: #E7DCD2;
  cursor: pointer;
}
  a:hover {
    text-decoration: underline !important;
  }

button {
  cursor: pointer;
}

h1, h2 {
	font-family: 'Roboto', sans-serif;
	text-transform: uppercase;
	letter-spacing: 1px;
	font-weight: 300;
}

